--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,7 +5,6 @@
   /* margin: 0 auto; */
   /* min-height: 100vh; */
 
-
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
@@ -25,28 +24,28 @@
   justify-content: center;
 }
 
-.form{
-    margin-top: 90px;
-    width: 327px;
+.form {
+  margin-top: 90px;
+  width: 327px;
 }
 
-.formInput{
-    margin-bottom: 23px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+.formInput {
+  margin-bottom: 23px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.inputGroup{
-    display: flex;  
+.inputGroup {
+  display: flex;
 }
 
-.inputGroup__gap9{
-    gap: 9px;
+.inputGroup__gap9 {
+  gap: 9px;
 }
 
-.inputGroup__gap12{
-    gap: 12px;
+.inputGroup__gap12 {
+  gap: 12px;
 }
 
 .backgroundImg {
@@ -58,24 +57,24 @@
   height: 240px;
 }
 
-.containerPadding{
+.containerPadding {
   padding: 33px 16px 0;
   height: 247px;
 }
 
-.containerCards{
+.containerCards {
   position: relative;
   width: 333px;
   margin: 0 auto;
   height: 247px;
 }
 
-.containerCards__cardBack{
+.containerCards__cardBack {
   position: absolute;
-  right: 0; 
+  right: 0;
 }
 
-.containerCards__cardFront{
+.containerCards__cardFront {
   position: absolute;
   bottom: 0;
   width: 286px;
@@ -91,6 +90,7 @@
 
 .containerCards__cardFront__numbers {
   margin-bottom: 20px;
+  letter-spacing: 2px;
 }
 
 .containerCards__cardFront__data {
@@ -99,7 +99,6 @@
   font-size: 12px;
   letter-spacing: 1px;
 }
-
 
 /* 
 .backgroundImg {
@@ -162,4 +161,64 @@
   .backgroundImg {
     background-size: cover;
   }
+}
+
+@media screen and (min-width: 1240px) {
+  .main {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "card  form";
+  }
+
+  .backgroundImg {
+    background-image: url("../../public/images/bg-main-desktop.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 100vh;
+  }
+
+  .containerForm {
+    height: 100vh;
+  }
+
+  .form {
+    margin-top: 170px;
+    width: 383px;
+  }
+
+  .containerPadding {
+    padding-right: 0;
+    height: 600px;
+  }
+
+  .containerCards{
+    margin: 0;
+    width: 100%;
+    height: 580px;
+  }
+
+  .containerCards__cardBack {
+    bottom: 0;
+  }
+
+  .containerCards__cardFront {
+    position: absolute;
+    bottom: 260px;
+    left: 100px;
+    width: 450px;
+    height: 248px;
+    padding: 29px 34px 30px 32px;
+    border-radius: 20px;    
+    box-shadow: 0 5px 3rem rgba(0, 0, 0, 0.541);
+    background: center url("../../public/images/bg-card-front.png");
+  }
+
+  .containerCards__cardFront__circles {
+    margin-bottom: 70px;
+  }
+
+  .containerCards__cardFront__numbers {
+    margin-bottom: 20px;
+    font-size: 28px;
+  }
+
 }
