--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -17,7 +17,29 @@
   justify-content: center;
 }
 
-.form {
+.containerMessage{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.iconComplete{
+  margin-bottom: 41px;
+}
+
+.containerMessage h2{
+  color: var(--very-dark-violet);
+  margin-bottom: 15px;
+}
+
+.containerMessage p{
+  color: var(--dark-grayish-violet);
+  text-transform: initial;
+  margin-bottom: 48px;
+}
+
+.form, 
+.containerMessage {
   width: 327px;
   margin: 90px 0 45px;
 }
